--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -8,17 +8,23 @@
     "dev": "nodemon build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.14.1",
+    "express-session": "^1.15.4",
+    "morgan": "^1.8.2",
+    "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
+    "@types/express-session": "^1.15.1",
+    "@types/morgan": "^1.7.32",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -28,10 +34,8 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
@@ -43,19 +47,16 @@
     "eslint-plugin-standard": "^2.0.1",
     "eslint-plugin-vuefix": "^0.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "nightwatch": "^0.9.12",
     "nodemon": "^1.11.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "typescript": "^2.4.2",
