--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.8.2",
     "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
   },
