--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.4",
     "morgan": "^1.8.2",
+    "node-sha1": "^1.0.1",
     "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
