--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.14.1",
     "express-session": "^1.15.4",
+    "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
