--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@types/redis": "^2.6.0",
     "body-parser": "^1.17.2",
     "express": "^4.14.1",
     "express-session": "^1.15.4",
     "jquery": "^3.2.1",
     "morgan": "^1.8.2",
+    "redis": "^2.8.0",
     "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
