--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -11,12 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@types/redis": "^2.6.0",
     "body-parser": "^1.17.2",
     "express": "^4.14.1",
     "express-session": "^1.15.4",
     "jquery": "^3.2.1",
     "morgan": "^1.8.2",
+    "q": "^1.5.0",
     "redis": "^2.8.0",
     "typed-rest-client": "^0.11.0",
     "vue": "^2.3.3",
@@ -29,6 +29,8 @@
     "@types/express": "^4.0.36",
     "@types/express-session": "^1.15.1",
     "@types/morgan": "^1.7.32",
+    "@types/q": "^1.0.5",
+    "@types/redis": "^2.6.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
