--- a/SourceCode/im/package.json
+++ b/SourceCode/im/package.json
@@ -1,8 +1,8 @@
 {
   "name": "im",
   "version": "1.0.0",
-  "description": "gxt web im",
-  "author": "zhenjun.xu <zhenjun.xu@g-emall.com>",
+  "description": "im",
+  "author": "gtb",
   "private": true,
   "scripts": {
     "dev": "nodemon build/dev-server.js",
@@ -11,11 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.14.1",
-    "express-session": "^1.15.4",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.0",
     "q": "^1.5.0",
     "redis": "^2.8.0",
     "typed-rest-client": "^0.11.0",
@@ -32,13 +32,13 @@
     "@types/q": "^1.0.5",
     "@types/redis": "^2.6.0",
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.26.0",
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -57,8 +57,8 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "nodemon": "^1.11.0",
+    "http-proxy-middleware": "^0.18.0",
+    "nodemon": "^1.18.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
@@ -66,12 +66,12 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "typescript": "^2.4.2",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.0.1",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
